# ChangeLog for Eschalon Savefile Editor

   09 Jul 2010; CJ Kucera <pez@apocalyptech.com> :
   Book 2 mapscripts now populate in the GUI
   Book 2 entities now populate in the GUI
   Saving of Book 2 maps is supported now

   24 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Book 2 Entities get drawn in map GUI

   21 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Initial Book 2 Map GUI integration

   18 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Initial Book 2 Map object integration

*eschalon_utils-0.6.3 (09 Jul 2010)

   09 Jul 2010; CJ Kucera <pez@apocalyptech.com> :
   Fixed a bug where entity scripts and object scripts weren't
      getting updated properly in the map editor.
   Fixed another similar bug with an unknown item value

*eschalon_utils-0.6.2 (01 Jul 2010)

   01 Jul 2010; CJ Kucera <pez@apocalyptech.com> :
   Fixed a bug for savegame map loading on Steam versions of Book 1

   30 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Fixed spell checkbox population when loading multiple chars

   29 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Cleaned up Item equality testing

   16 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Item quantity should allow values greater than 255

*eschalon_utils-0.6.1 (14 Jun 2010)

   14 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Fix to support gtk+ 2.20
   Bundle Windows version with gtk+ 2.20
   Added an Uninstall icon to start menu for Windows
   Handle when the initial load window is destroyed properly
   Update Book 1 avatar picture on load, even when it's ID 0

   12 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Fix window title for Book 2 Character Editor
   Fixed a bug which wouldn't always show changed
      elements in the item editor (book 2)
   Don't show permanent statuses which the engine overwrites

*eschalon_utils-0.6.0 (12 Jun 2010)

   09 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Added leftover Attribute/Skill points to character editor
